samples/_failures_safe/1761505317_7ad9fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3a838e35.c: In function ‘main’:
./samples/SAFE/__tmp_3a838e35.c:152:40: error: expected ‘)’ at end of input
  152 |         printf("%d ", decompressed.data
      |               ~                        ^
      |                                        )
./samples/SAFE/__tmp_3a838e35.c:152:9: error: expected declaration or statement at end of input
  152 |         printf("%d ", decompressed.data
      |         ^~~~~~
./samples/SAFE/__tmp_3a838e35.c:152:9: error: expected declaration or statement at end of input
